--- a/style/responsivo.css
+++ b/style/responsivo.css
@@ -1,72 +1,112 @@
-@media (min-width: 320px), (max-width: 320px) {
-    #title {
-        font-size: 30px;
-        animation: animTitulo2 10s;
-    }
+@media (max-width: 900px) {
 
-    h1 {
-        margin-top: 70px;
-    }
-
-    #s1 {
-        display: flex;
+    #mainSection,
+    #s1,
+    #s2,
+    #s3,
+    #s4 {
+        padding: 10px;
         flex-direction: column;
+        align-items: center;
+    }
+
+    .texto,
+    .img {
+        width: 100%;
+        text-align: center;
+    }
+
+    .img img {
+        max-width: 80vw;
+        height: auto;
     }
 
     #s1 img {
-        margin: 70px 0;
+        margin: 0;
+    }
+
+    .projetos {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    #projeto2 .descricao {
+        flex-direction: column-reverse;
+    }
+
+    .descricao {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #projeto1 .image {
+        margin: 2rem 0;
+    }
+
+    #projeto2 .image {
+        margin: 2rem 0;
+    }
+
+    #skills {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .skills-items {
+        margin: 10px;
+        min-width: 80px;
+    }
+
+    header #title {
+        font-size: 1.5em;
+        padding: 10px 0;
     }
 }
 
-@keyframes animTitulo2 {
-    0% {
-        opacity: 0;
-        top: 50%;
-        font-weight: 300;
-        font-size: 50px;
-        margin-top: -60px;
+@media (max-width: 600px) {
+    body {
+        font-size: 16px;
     }
 
-    10% {
-        opacity: 25%;
-        top: 50%;
-        font-weight: 300;
-        font-size: 50px;
-        margin-top: -60px;
+    h1 {
+        font-size: 1.3em;
     }
 
-    20% {
-        opacity: 50%;
-        top: 50%;
-        font-weight: 300;
-        font-size: 50px;
-        margin-top: -60px;
+    h2 {
+        font-size: 1em;
     }
 
-    30% {
-        opacity: 75%;
-        top: 50%;
-        font-weight: 300;
-        font-size: 50px;
-        margin-top: -60px;
+    .img img {
+        max-width: 100vw;
     }
 
-    40% {
-        opacity: 100%;
-        top: 50%;
-        font-weight: 300;
-        font-size: 50px;
-        margin-top: -60px;
-    }
-
-    100% {
-        top: 0;
-        font-weight: 300;
-        font-size: 30px;
-        margin-top: 0px;
+    footer {
+        font-size: 0.9em;
+        padding: 10px;
     }
 }
 
+@media (max-width: 750px) {
+    .skills-items {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 470px) {
+    #skills {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+    }
+    .skills-items {
+        width: 90%;
+        max-width: 350px;
+    }
+}
+
+/*
 @media (min-width: 481px) {
     
 }
