--- a/style/responsivo.css
+++ b/style/responsivo.css
@@ -115,6 +115,10 @@
         max-width: 100vw;
     }
 
+    .descricao img {
+        width: 95%;
+    }
+
     footer {
         font-size: 0.9em;
         padding: 10px;
